--- a/wp-content/themes/adrenalin/src/sass/globals/_header.scss
+++ b/wp-content/themes/adrenalin/src/sass/globals/_header.scss
@@ -262,6 +262,7 @@ $assets-path: '../..';
           background: #666;
         }
       }
+      #menu-home-menus-for-inner-pages,
       #menu-footer-links-company {
         width: 100%;
         li {
